# e-additives.j2me

./: README  README.md
android/: AndroidManifest.xml  HISTORY
android/res/layout/: browse.xml  favourites.xml  item_row_layout.xml  showitem.xml
android/res/raw/: en.xml
android/res/values/: strings.xml
android/res/xml/: searchable.xml
android/src/net/vexelon/eadditives/android/: AdditivesListAdapter.java  BrowseActivity.java  FavouritesActivity.java  ShowItemActivity.java  TabWidgetActivity.java
android/src/net/vexelon/eadditives/android/common/: Defs.java  Utils.java
android/src/net/vexelon/eadditives/android/database/: Additive.java  CommentUser.java  Comments.java  Concept.java  Database.java  RESTDatabase.java  XmlDatabase.java
docs/: E-additives.mm  J2ME_Client_Planning.mm  Planning_And_Tasks.mm  schema_deploy_architecture.dia
ead-server/: CMakeLists.txt  Config.h.in  log4cpp.properties.conf
ead-server/src/: CMakeLists.txt  commandlineparser.cpp  commandlineparser.h  configuration.cpp  configuration.h  ead-server.cpp  ead-server.h  typedefs.h
j2me/: Application Descriptor  HISTORY
j2me/mtj-build/: BUILD  BUILD_BG  mtj-build.properties  mtj-build.xml
j2me/src/com/kenamick/eadditives/: Application.java  CoreMidlet.java  Defs.java  l10n.java
tools/: etata-database-gui.sln
tools/etata-database-gui/: Form1.Designer.cs  Form1.cs  MainProc.cs  Program.cs  XmlDatabase.cs  etata-database-gui.csproj  frmHeaderInfo.Designer.cs  frmHeaderInfo.cs  frmMerge.Designer.cs  frmMerge.cs  frmNewItem.Designer.cs  frmNewItem.cs
tools/etata-database-gui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
